--- a/Pandas—Getting Started /0 - First Steps.ipynb
+++ b/Pandas—Getting Started /0 - First Steps.ipynb
@@ -329,7 +329,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# head\n",
+    "# head will display the first 5 rows by default and several columns but\n",
+    "# will skip columns for very wide data sets\n",
     "dict_df3.head()"
    ],
    "metadata": {
@@ -372,6 +373,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# tail works like head but from the end of the dataframe\n",
     "dict_df3.tail()"
    ],
    "metadata": {
@@ -403,6 +405,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# shape provides the rows and column counts\n",
     "dict_df3.shape"
    ],
    "metadata": {
@@ -423,6 +426,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# info will provide shape and typing information\n",
     "dict_df3.info()"
    ],
    "metadata": {
