structures & types lesson

--- a/Pandas—Getting Started /2 - Understanding Stuctures and Types.ipynb
+++ b/Pandas—Getting Started /2 - Understanding Stuctures and Types.ipynb
@@ -1,13 +1,610 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "## Overview\n",
+    "\n",
+    "This notebook reviews the core concepts of:\n",
+    "* DataFrames\n",
+    "* Series\n",
+    "* Dtypes\n",
+    "\n",
+    "To use you need to have python installed and jupyterlab.  </br>\n",
+    "The code assumes you have a basic familiarity with python syntax and use.\n",
+    "## Packages Needed\n",
+    "* sys\n",
+    "* pandas\n",
+    "* numpy"
+   ],
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in /Users/wes/Library/Python/3.10/lib/python/site-packages (1.23.4)\r\n",
+      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (1.4.4)\r\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas) (2.8.2)\r\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas) (2022.2.1)\r\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /Users/wes/Library/Python/3.10/lib/python/site-packages (from pandas) (1.23.4)\r\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Install & Import\n",
+    "import sys\n",
+    "\n",
+    "!{sys.executable} -m pip install numpy\n",
+    "!{sys.executable} -m pip install pandas\n",
+    "\n",
+    "'''\n",
+    "Using \"!{sys.executable} -m pip install\"   instead of \"!pip install\"\n",
+    "ensures that the install is done in the context and kernel currently running\n",
+    "the notebook. This is a recommended best practice and I try to use this method within\n",
+    "notebooks as I try to default to what I would want to see if I was collaborating with\n",
+    "a group.\n",
+    "'''\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Series\n",
+    "Series are labeled arrays and the building block to\n",
+    "DataFrame rows and columns."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(0,)"
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "empty_float_series = pd.Series(data=None, index=None, dtype=np.float64, name=\"Float Series\")\n",
+    "empty_float_series.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "Index: 0 entries\n",
+      "Series name: Float Series\n",
+      "Non-Null Count  Dtype  \n",
+      "--------------  -----  \n",
+      "0 non-null      float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 0.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "empty_float_series.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(4,)"
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [0.0, 1.1, 2.2, 3.3]\n",
+    "float_series = pd.Series(data=data, index=None, dtype=np.float64, name=\"Float Series\")\n",
+    "float_series.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
+      "Series name: Float Series\n",
+      "Non-Null Count  Dtype  \n",
+      "--------------  -----  \n",
+      "4 non-null      float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 160.0 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "float_series.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    5.5\n1    6.6\n2    7.7\n3    8.8\nName: Float Series, dtype: float64"
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# you can easily make a change to every value through\n",
+    "# functions like add\n",
+    "float_series.add(5.5)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    0.0\n1    1.1\n2    2.2\n3    3.3\nName: Float Series, dtype: float64"
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# but this does not edit the underlying stored values\n",
+    "# unless it is specifically assigned back to the same variable name\n",
+    "float_series.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    5.5\n1    6.6\n2    7.7\n3    8.8\nName: Float Series, dtype: float64"
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_series = float_series.add(5.5)\n",
+    "float_series.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "bob      1.1\njane     2.2\nlance    3.3\nName: Dictionary Series, dtype: float64"
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the data parameter can accept several types not just list/array data\n",
+    "data_dict = {\"bob\":1.1, \"jane\":2.2, \"lance\":3.3}\n",
+    "dict_series = pd.Series(data=data_dict, index=None, dtype=np.float64, name=\"Dictionary Series\")\n",
+    "dict_series.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1.1"
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# notice the dictionary keys became the index\n",
+    "# This now allows use like\n",
+    "dict_series[\"bob\"]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    289\n1    641\n2    916\n3    203\n4    903\ndtype: int64"
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# you can also use numpy ndarrays\n",
+    "np_rand_data = np.random.randint(0,1000,100)\n",
+    "random_series = pd.Series(data=np_rand_data)\n",
+    "random_series.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 100 entries, 0 to 99\n",
+      "Series name: None\n",
+      "Non-Null Count  Dtype\n",
+      "--------------  -----\n",
+      "100 non-null    int64\n",
+      "dtypes: int64(1)\n",
+      "memory usage: 928.0 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_series.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "A    4.0\nB    4.0\nC    4.0\nD    4.0\ndtype: float64"
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# you can also set a single value with a given index like\n",
+    "\n",
+    "fours_series = pd.Series(data=4., index=[\"A\", \"B\", \"C\", \"D\"])\n",
+    "fours_series.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Dtypes\n",
+    "Pandas support the following Dtypes:\n",
+    "* object - text, str, or mixed formats\n",
+    "* int64 - integers\n",
+    "* flout64 - floating point numbers\n",
+    "* bool - True False\n",
+    "* datetime64 - date and time values\n",
+    "* timedelta[ns] - difference between two datetimes\n",
+    "* category - a fixed finite list of string values"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.12.23.3\n",
+      "verus\n",
+      "6.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Why dtypes matter.. because there is specific api and functions\n",
+    "# to each types that can be very very useful.\n",
+    "\n",
+    "# For example:\n",
+    "obj_series = pd.Series(data=[\"1.1\", \"2.2\", \"3.3\"], dtype=str)\n",
+    "print(obj_series.sum())\n",
+    "print(\"verus\")\n",
+    "print(dict_series.sum())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "more on this later..."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## DataFrames"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       Dictionary Series\nbob                  1.1\njane                 2.2\nlance                3.3",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_df = pd.DataFrame(data=dict_series)\n",
+    "first_df.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3 entries, bob to lance\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Dictionary Series  3 non-null      float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 156.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_df.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       Dictionary Series obj_nums\nbob                  1.1      1.1\njane                 2.2      2.2\nlance                3.3      3.3",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n      <th>obj_nums</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n      <td>1.1</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n      <td>2.2</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n      <td>3.3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_df[\"obj_nums\"] = [\"1.1\", \"2.2\", \"3.3\"]\n",
+    "first_df.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3 entries, bob to lance\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Dictionary Series  3 non-null      float64\n",
+      " 1   obj_nums           3 non-null      object \n",
+      "dtypes: float64(1), object(1)\n",
+      "memory usage: 180.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_df.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Series name: None\n",
+      "Non-Null Count  Dtype \n",
+      "--------------  ----- \n",
+      "3 non-null      object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 152.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj_series.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       Dictionary Series obj_nums    C\nbob                  1.1      1.1  NaN\njane                 2.2      2.2  NaN\nlance                3.3      3.3  NaN",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n      <th>obj_nums</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n      <td>1.1</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n      <td>2.2</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n      <td>3.3</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_df[\"C\"] = obj_series\n",
+    "first_df.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       Dictionary Series obj_nums    C\nbob                  1.1      1.1  1.1\njane                 2.2      2.2  2.2\nlance                3.3      3.3  3.3",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dictionary Series</th>\n      <th>obj_nums</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bob</th>\n      <td>1.1</td>\n      <td>1.1</td>\n      <td>1.1</td>\n    </tr>\n    <tr>\n      <th>jane</th>\n      <td>2.2</td>\n      <td>2.2</td>\n      <td>2.2</td>\n    </tr>\n    <tr>\n      <th>lance</th>\n      <td>3.3</td>\n      <td>3.3</td>\n      <td>3.3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_df[\"C\"] = obj_series.values\n",
+    "first_df.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3 entries, bob to lance\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Dictionary Series  3 non-null      float64\n",
+      " 1   obj_nums           3 non-null      object \n",
+      " 2   C                  3 non-null      object \n",
+      "dtypes: float64(1), object(2)\n",
+      "memory usage: 204.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_df.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
